basic estructure html and css components

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,26 +3,145 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
+    <title>Open Spaces</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      src="https://kit.fontawesome.com/6c4bd50c50.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
   <body>
-    <div class="page">
-      <include
-        src="./partials/header.html"
-        title="Bienvenidos a Adalab"
-      ></include>
+    <header class="header">
+      <span><i class="fa-solid fa-bars"></i></span>
+      <nav class="nav">
+        <ul class="list">
+          <li class="list-item">
+            <a class="link" href="#">Productos</a>
+          </li>
+          <li class="list-item">
+            <a class="link" href="#">Colecciones</a>
+          </li>
+          <li class="list-item">
+            <a class="link" href="#">Tienda</a>
+          </li>
 
-      <include src="./partials/footer.html"></include>
-    </div>
-    <script src="./assets/js/main.js"></script>
+          <li class="list-item">
+            <a class="link" href="#">Inicio</a>
+          </li>
+        </ul>
+      </nav>
+      <img class="logo" src="./assets/images/logo.png" alt="loco Open Spaces" />
+    </header>
 
-    <div>hola</div>
+    <main>
+      <section class="hero">
+        <img src="" alt="" />
+        <h1 class="main-title">Disfruta creando espacios</h1>
+        <a href="#">comprar ahora</a>
+      </section>
+      <section class="services">
+        <h2>volverser organizado se siente mejor con open spaces</h2>
+        <include
+          src="./partials/article.html"
+          icon="./assets/images/icon_1.png"
+          title="lo que necesitas"
+          subtitle="una linea de productos diseñados para
+        todos tus espacio"
+        ></include>
+
+        <include
+          src="./partials/article.html"
+          icon="./assets/images/icon_2.png"
+          title="materias primas sustentables"
+          subtitle="todos los productos con materias primas sustentables"
+        ></include>
+
+        <include
+          src="./partials/article.html"
+          icon="./assets/images/icon_3.png"
+          title="guía"
+          subtitle="soporte y asesoramiento para ayudarte con tu objetivo"
+        ></include>
+      </section>
+      <section class="shipements">
+        <include
+          src="./partials/article.html"
+          icon="./assets/images/icon_4.png"
+          title="envio gratis garantizado"
+          subtitle="envio gratos en compras desde 100"
+        ></include>
+      </section>
+      <section class="enjoy">
+        <h2>disfruta creando spacios</h2>
+        <p>una linea de producots diseñados para todos tus espacion</p>
+        <a href="#">comprar ahora</a>
+        <img
+          src="./assets/images/creando-spacios"
+          alt="metal storage baskets in the bathroom with towels and toilet paper"
+        />
+      </section>
+      <footer class="footer">
+        <div class="footer__nav">
+          <h3>tienda</h3>
+          <nav>
+            <ul>
+              <li><a href="#"> producots</a></li>
+              <li><a href="#">cajoneras</a></li>
+              <li><a href="#">para toda la casa</a></li>
+              <li><a href="#">habitaciones</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__nav">
+          <h3>nosotros</h3>
+          <nav>
+            <ul>
+              <li><a href="#">nuestra guia</a></li>
+              <li><a href="#">nuestro diseño</a></li>
+              <li><a href="#">nuestra historia</a></li>
+              <li><a href="#">ayuda</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__nav">
+          <h3>contacto</h3>
+          <nav>
+            <ul>
+              <li>
+                <a href="mailto:morales.lupe@gmail.com" target="_blank"
+                  >ayuda@</a
+                >
+              </li>
+              <li><a href="#">socios</a></li>
+            </ul>
+            <div class="container-social-network">
+              <a
+                href="https://www.linkedin.com/in/guadalupe-morales-carmona-817245226/"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin-in icon-social-network"></i
+              ></a>
+
+              <a href="instagram"></a>
+
+              <a href="https://twitter.com/lacanellyatope" target="_blank"
+                ><i class="fa-brands fa-twitter icon-social-network"></i
+              ></a>
+
+              <a></a>
+            </div>
+          </nav>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
