Add shipping Section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -75,13 +75,16 @@
           subtitle="Soporte y asesoramiento para ayudarte con tu objetivo"
         ></include>
       </section>
-      <section class="shipements">
-        <include
-          src="./partials/article.html"
-          icon="./assets/images/icon_4.png"
-          title="envio gratis garantizado"
-          subtitle="envio gratos en compras desde 100"
-        ></include>
+      <sectio class="shipping">
+         <div class="shipping_article" >
+        
+            <img class="icon" src="./assets/images/icon_4.png" alt="icon services" />
+            <h2 class="title-white">Envío gratis garantizado</h2>
+            <p>Envío gratis en compras desde
+              100"</p>
+              <a class="link-buy"  href="#">Comprar ahora</a>
+          
+        </div>
       </section>
       <section class="enjoy">
         <h2>disfruta creando spacios</h2>
