update services section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -50,9 +50,12 @@
       </section>
 
       <section class="services">
-        <h2>
-          Volverser organizado se siente mejor con <span> open spaces</span>
-        </h2>
+        <div class="services_text">
+          <h2  >
+            Volverse organizado se siente mejor con <span> open spaces</span>
+          </h2>
+        </div>
+       
         <include
           src="./partials/article.html"
           icon="./assets/images/icon_1.png"
