--- a/src/html/index.html
+++ b/src/html/index.html
@@ -88,7 +88,7 @@
         <a class="link-buy" href="#">Comprar ahora</a>
       </section>
 
-      <section class="enjoy">
+      <!--   <section class="enjoy">
         <div class="enjoy__info">
           <h2>Disfruta creando espacios</h2>
           <p>Una línea de productos diseñados para todos tus espacios</p>
@@ -100,62 +100,66 @@
           src="./assets/images/creando-espacios.jpg"
           alt="metal storage baskets in the bathroom with towels and toilet paper"
         />
-      </section>
+      </section> -->
     </main>
 
-    <!-- <footer class="foot">
+    <footer class="footer">
       <div class="footer__nav">
-        <h3>tienda</h3>
+        <h3>Tienda</h3>
         <nav>
           <ul>
-            <li><a href="#"> producots</a></li>
-            <li><a href="#">cajoneras</a></li>
-            <li><a href="#">para toda la casa</a></li>
-            <li><a href="#">habitaciones</a></li>
+            <li class="link"><a href="#">Producots</a></li>
+            <li class="link"><a href="#">Cajoneras</a></li>
+            <li class="link"><a href="#">Para toda la casa</a></li>
+            <li class="link"><a href="#">Habitaciones</a></li>
           </ul>
         </nav>
       </div>
 
       <div class="footer__nav">
-        <h3>nosotros</h3>
+        <h3>Nosotros</h3>
         <nav>
           <ul>
-            <li><a href="#">nuestra guia</a></li>
-            <li><a href="#">nuestro diseño</a></li>
-            <li><a href="#">nuestra historia</a></li>
-            <li><a href="#">ayuda</a></li>
+            <li class="link"><a href="#">Nuestra guia</a></li>
+            <li class="link"><a href="#">Nuestro diseño</a></li>
+            <li class="link"><a href="#">Nuestra historia</a></li>
+            <li class="link"><a href="#">Ayuda</a></li>
           </ul>
         </nav>
       </div>
 
       <div class="footer__nav">
-        <h3>contacto</h3>
+        <h3>Contacto</h3>
         <nav>
           <ul>
-            <li>
+            <li class="link">
               <a href="mailto:morales.lupe@gmail.com" target="_blank"
-                >ayuda@</a
+                >ayuda@openspaces.com</a
               >
             </li>
-            <li><a href="#">socios</a></li>
+            <li class="link"><a href="#">Socios</a></li>
           </ul>
+
           <div class="container-social-network">
             <a
               href="https://www.linkedin.com/in/guadalupe-morales-carmona-817245226/"
               target="_blank"
-              ><i class="fa-brands fa-linkedin-in icon-social-network"></i
+              ><i class="fa-brands fa-linkedin-in icon-social-network fa-2x"></i
             ></a>
 
-            <a href="instagram"></a>
+            <a href="https://www.instagram.com/yampodog/">
+              <i class="fa-brands fa-instagram fa-2x"></i>
+            </a>
 
             <a href="https://twitter.com/lacanellyatope" target="_blank"
-              ><i class="fa-brands fa-twitter icon-social-network"></i
+              ><i class="fa-brands fa-twitter icon-social-network fa-2x"></i
             ></a>
 
             <a></a>
           </div>
         </nav>
       </div>
-    </footer> -->
+      <a href="./index.html"> <i class="fa-solid fa-arrow-up"></i></a>
+    </footer>
   </body>
 </html>
