update enjoy section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -88,19 +88,23 @@
         <a class="link-buy" href="#">Comprar ahora</a>
       </section>
 
-      <!--   <section class="enjoy">
-        <div class="enjoy__info">
-          <h2>Disfruta creando espacios</h2>
-          <p>Una línea de productos diseñados para todos tus espacios</p>
-          <a class="buy-now" href="#">comprar ahora</a>
-        </div>
+        <section class="enjoy">
+        <div class="enjoy__container">
+          <div class="enjoy__item">
+            <h2>Disfruta creando espacios</h2>
+            <p>Una línea de productos diseñados para todos tus espacios</p>
+            <a class="buy-now__enjoy" href="#">comprar ahora</a>
 
-        <img
-          class="enjoy__img"
-          src="./assets/images/creando-espacios.jpg"
-          alt="metal storage baskets in the bathroom with towels and toilet paper"
-        />
-      </section> -->
+          </div>
+
+          <div  class="enjoy__item"><img
+           
+            src="./assets/images/creando-espacios.jpg"
+            alt="metal storage baskets in the bathroom with towels and toilet paper"
+          /> </div>
+
+        
+      </section>
     </main>
 
     <footer class="footer">
