--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,7 @@
       src="https://kit.fontawesome.com/6c4bd50c50.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="./assets/images/favicon.png">
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
 
