--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,7 @@
     <include src="./partials/header.html"></include>
 
     <main class="main">
-      <include src="./partials/open-space.html"></include>
+      <!--   <include src="./partials/open-space.html"></include> -->
       <include src="./partials/services.html"></include>
       <include src="./partials/shipping.html"></include>
       <include src="./partials/enjoy.html"></include>
